--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ server:
 spring.datasource:
   url: jdbc:mysql://127.0.0.1:3306/bbs?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8&useSSL=false&allowPublicKeyRetrieval=true
   username: root
-  password: Abcd1234!
+  password: 123456
   driver-class-name: com.mysql.cj.jdbc.Driver
 
 
