--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,8 @@ spring.datasource:
   password: 123456
   driver-class-name: com.mysql.cj.jdbc.Driver
 
-
+#搜索方式：es,lucene
+search.type: lucene
   #Elasticsearch
   #spring.data.elasticsearch.cluster-nodes=127.0.0.1:9300
 
