--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,9 @@ server:
   servlet.contextPath: /bbs
 
 spring.datasource:
-  url: jdbc:mysql://127.0.0.1:13306/bbs?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8&useSSL=false&allowPublicKeyRetrieval=true
+  url: jdbc:mysql://127.0.0.1:3306/bbs?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8&useSSL=false&allowPublicKeyRetrieval=true
   username: root
-  password: 12345678
+  password: 123456
   driver-class-name: com.mysql.cj.jdbc.Driver
 
 #搜索方式：es,lucene
