--- a/.github/workflows/codeql-debug.yml
+++ b/.github/workflows/codeql-debug.yml
@@ -1,51 +1,66 @@
 name: "CodeQL Debugging"
-on: workflow_dispatch
+on: [workflow_dispatch,push]
 
 jobs:
   debug:
     name: CodeQL Debug Job
     runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
     strategy:
       fail-fast: false
       matrix:
+       # CodeQL supports [ 'cpp', 'csharp', 'go', 'java', 'javascript', 'python' ]
+       #   languages: go, javascript, csharp, python, cpp, java, ruby
+        # Learn more:
+        # https://docs.github.com/en/free-pro-team@latest/github/finding-security-vulnerabilities-and-errors-in-your-code/configuring-code-scanning#changing-the-languages-that-are-analyzed
         language: [ 'java' ]
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
-      
-      
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        distribution: "Liberica"
-        java-version: 1.8
-        java-package: jdk+fx
-    
 
     - name: Initialize CodeQL
       id: codeqlinit
-      uses: github/codeql-action/init@v1
+      uses: github/codeql-action/init@v2
       with:
+        debug: true
         languages: ${{ matrix.language }}
-    
-    - name: Auto Build CodeQL Databases
-      uses: github/codeql-action/autobuild@v1
-      
+        config-file: advanced-security/codeql-queries/config/codeql.yml@main #ql better
 
     - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v1
+      uses: github/codeql-action/analyze@v2
       with:
-        upload: false
+        category: "/language:${{matrix.language}}"
+        add-snippets: true
+
 
     - name: Debug Analysis
-      uses: SummerSec/codeql-debug@master
+      uses: MysteryZ/codeql-debug@main
       with:
         language: ${{ matrix.language }}
 
+
     - name: Upload loc as a Build Artifact
-      uses: actions/upload-artifact@v2.2.0
+      uses: actions/upload-artifact@v3
       with:
         name: codeql-debug-results
         path: codeql-debug-results
-        retention-days: 30
+        retention-days: 1
+
+    # - name: Upload loc as a Build Artifact
+    #   uses: actions/upload-artifact@v3
+    #   with:
+    #     name: codeql_databases
+    #     path: ${{ runner.temp }}/codeql_databases/${{ matrix.language }}
+    #     retention-days: 1
+
+    #不需要上传结果，直接看就行
+    # - name: Upload loc as a Build Artifact
+    #   uses: actions/upload-artifact@v3
+    #   with:
+    #     name: codeql_result
+    #     path:  ${{ github.workspace }}/SARIF_results
+    #     retention-days: 30
