--- a/.github/workflows/codeql-debug.yml
+++ b/.github/workflows/codeql-debug.yml
@@ -38,7 +38,7 @@ jobs:
 
 
     - name: Debug Analysis
-      uses: MysteryZ/codeql-debug
+      uses: MysteryZ/codeql-debug@master
       with:
         language: ${{ matrix.language }}
 
