--- a/.github/workflows/codeql-debug.yml
+++ b/.github/workflows/codeql-debug.yml
@@ -39,11 +39,11 @@ jobs:
     - name: Auto Build CodeQL Databases
       uses: github/codeql-action/autobuild@v2
 
-    # - name: Perform CodeQL Analysis
-    #   uses: github/codeql-action/analyze@v2
-    #   with:
-    #     category: "/language:${{matrix.language}}"
-    #     add-snippets: true
+    - name: Perform CodeQL Analysis
+      uses: github/codeql-action/analyze@v2
+      with:
+        category: "/language:${{matrix.language}}"
+        add-snippets: true
 
     # - name: Debug Analysis
     #   uses: MysteryZ/codeql-debug@master
@@ -64,12 +64,12 @@ jobs:
     - name: Upload loc as a Build Artifact
       uses: actions/upload-artifact@v3
       with:
-        name: codeql-debug-results-tmp
-        path: codeql-debug-results-tmp
+        name: codeql-debug-results
+        path: codeql-debug-results
         retention-days: 1
     #登录runner
-    - name: Setup Debug Session
-      uses: csexton/debugger-action@master
+    # - name: Setup Debug Session
+    #   uses: csexton/debugger-action@master
     # - name: Upload loc as a Build Artifact
     #   uses: actions/upload-artifact@v3
     #   with:
